# opencv-gstreamer

./: CMakeLists.txt
src/: Receiver.cpp  Sender.cpp
